--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nathansdunn.blendify.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_pic1"
+        android:title="1"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_pic2"
+        android:title="2"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_blend"
+        android:title="3"
+        android:icon="@android:drawable/btn_star"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_contact"
+        android:title="@string/action_contact"
+        android:icon="@android:drawable/sym_action_email"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_save"
+        android:title="@string/action_contact"
+        android:icon="@android:drawable/ic_menu_save"
+        app:showAsAction="always" />
+
 </menu>
